# windy-horoscope

./: README.md  pyproject.toml
tests/: test_winzy_horoscope.py
winzy_horoscope/: __init__.py
