[project]
name = "winzy-horoscope"
version = "0.0.1"
description = "Get daily Horoscope using https://horoscope-app-api.vercel.app by Ashutosh Krishna"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "colorama",
    "requests",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-horoscope"
Changelog = "https://github.com/sukhbinder/winzy-horoscope/releases"
Issues = "https://github.com/sukhbinder/winzy-horoscope/issues"
CI = "https://github.com/sukhbinder/winzy-horoscope/actions"

[project.entry-points."winzy.plugins"]
horoscope = "winzy_horoscope:horoscope_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
